--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testClasses.OrangeHRM_AddEmployeeTest</td>
+<td>testClasses.OrangeHRM_LogoutTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addEmployeeTest</td>
+<td>testLogout</td>
 <td>sanity </td>
 </tr>
 <tr>
