--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>sanity</td><td>OrangeHRM_AddEmployeeTest.addEmployeeTest()[pri:1, instance:testClasses.OrangeHRM_AddEmployeeTest@4d5d943d]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>sanity</td><td>OrangeHRM_LogoutTest.testLogout()[pri:2, instance:testClasses.OrangeHRM_LogoutTest@368f2016]<br/></td></tr>
 </table>
