--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67e66c">  <td>25/05/13 13:27:07</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupExtent()[pri:0, instance:testClasses.OrangeHRM_AddEmployeeTest@4d5d943d]">&gt;&gt;setupExtent</td> 
+<tr bgcolor="67e66c">  <td>25/05/14 16:37:22</td>   <td>0</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testClasses.OrangeHRM_LogoutTest@368f2016]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="b28192">  <td>25/05/13 13:27:11</td>   <td>4623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM_AddEmployeeTest.addEmployeeTest()[pri:1, instance:testClasses.OrangeHRM_AddEmployeeTest@4d5d943d]">addEmployeeTest</td> 
+<tr bgcolor="b28192">  <td>25/05/14 16:37:08</td>   <td>-13411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM_LogoutTest.testLogout()[pri:2, instance:testClasses.OrangeHRM_LogoutTest@368f2016]">testLogout</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="67e66c">  <td>25/05/13 13:27:07</td>   <td>225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:testClasses.OrangeHRM_AddEmployeeTest@4d5d943d]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="67e66c">  <td>25/05/13 13:27:24</td>   <td>17332</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownDriver()[pri:0, instance:testClasses.OrangeHRM_AddEmployeeTest@4d5d943d]">&lt;&lt;teardownDriver</td> 
+<tr bgcolor="67e66c">  <td>25/05/14 16:37:21</td>   <td>-490</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownDriver()[pri:0, instance:testClasses.OrangeHRM_LogoutTest@368f2016]">&lt;&lt;teardownDriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="67e66c">  <td>25/05/13 13:27:24</td>   <td>17525</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testClasses.OrangeHRM_AddEmployeeTest@4d5d943d]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67e66c">  <td>25/05/14 16:37:00</td>   <td>-21278</td> <td title="&gt;&gt;BaseClass.setupExtent()[pri:0, instance:testClasses.OrangeHRM_LogoutTest@368f2016]">&gt;&gt;setupExtent</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>25/05/14 16:37:01</td>   <td>-20876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:testClasses.OrangeHRM_LogoutTest@368f2016]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
 </table>
